Razor (v1.0.1.*) Changelog:

Razor is a FREE program.  Unlike competing programs like UOAssist, Razor does not charge any money at all and provides even more features.  Razor is now available on the regular OSI servers for unlimited accounts absolutely free.  But Razor needs your help!  Razor is now accepting donations over PayPal.  UOAssist (a similar program, but for OSI servers only) costs $15 PER ACCOUNT while Razor is FREE for UNLIMITED ACCOUNTS.  Your donation of $5 or $10 (or any amount!) is LESS than you would pay for a similar program!  Donations are greatly appreciated and will help ensure that the developers continue to improve and maintain this fine product.
Donate via PayPal: https://www.paypal.com/xclick/business=zippy%40runuo.com&item_name=Razor&no_shipping=1&no_note=1&tax=0&currency_code=USD

Please report any and all bugs you encounter at http://www.runuo.com/forums/forumdisplay.php?f=44

Additions:
-Connect UO compatability
-Added a "-macro <name>" command to play a macro from inside of the client.
-A dismount hotkey (in the "Misc" category)

Changes/Fixes:
-Several performance enhancements to the network code.  Especially on encrypted (OSI) servers.
-Changed the way the welcome screen handles OSI encryption.  You should now always check the "patch encryption" box unless you are using a special client (like one created by UORice).  If you are confused, then always check the "Patch Encryption" box, even when connecting to OSI.
