@@ -604,7 +604,11 @@ namespace Assistant
 				}
 				else
 				{	
-					m_OnTarget( info.Type == 1 ? true : false, info.Serial, new Point3D( info.X, info.Y, info.Z ), info.Gfx );
+					if ( Macros.MacroManager.AcceptActions )
+						MacroManager.Action( new AbsoluteTargetAction( info ) );
+
+					if ( m_OnTarget != null )
+						m_OnTarget( info.Type == 1 ? true : false, info.Serial, new Point3D( info.X, info.Y, info.Z ), info.Gfx );
 				}
 			}
 
